2012-12-27
	update database to 354
	packet fixes
	fix wrong password when delete character cause client frozen

2012-12-21
	update database to 353
	many packet changed, wait fix.
	add additions to license.

2012-11-26
	update pet pict script
	client 351+ texture missing, still wait fix.

2012-11-22
	update database to 351

2012-11-05
	update item category script
	add shutdown command

2012-10-18
	update database to 348

2012-10-13
	add script.skill_add, skill_del, skill_clear
	add command /skill_add skill_id, /skill_del skill_id, skill_clear
	add script.printallskill, command /printallskill
	modify DEFAULT_GMLEVEL to 255
	require input to exit when except main script exception in launcher
	replace monsters *magic* to *skill* (physical skill packet same as magic)
	add test skill

2012-10-11
	add pack/io_unpack array, pack/unpack/io_unpack long
	move general.pack*/unpack*/io_unpack*, packet.pack* to packet_struct
	add test skill
	fix /effect error

2012-10-10
	fix warp coord error when 11f8(move) came after 05e6(event)
	pop pc on usermap when master logout

2012-10-09
	fix freeze in use skill call from item
	add lib.usermaps, lib.obj.usermap, pc.usermap_obj
	add script.lock_move, script.unlock_move
	limited support set/unset flygarden rope (only rope)
	DATABASE_FORMAT_VERSION 1.1.2: set item.skill_id, item.skill_id_add

2012-10-05
	add kuji category script
	add script.npcshop_list(pc, shop_item_list)
	add common pet pict switch script
	skip load file under script/ filename startswith __
	fix packet 09e9 send wrong pict id

2012-10-04
	add nekomata heart switch script
	add pc.item_event_id
	DATABASE_FORMAT_VERSION 1.1.1:
	petid->pet_id, eventid->event_id

2012-09-27
	add item, warehouse stock limit
	log file use utf-8 not system encoding
	move general.secure* to lib.security
	fix ctrl+c exit error on windows

2012-09-26:
	add script/site_packages
	import warp point script from yutori server
	move lib.env to lib._env (_env store default values)