@@ -138,7 +138,7 @@ def make_0033(reply_ping=False):
 def make_09e9(pc):
 	"""装備情報 IDのキャラの見た目を変更"""
 	result = pack_int(pc.id)
-	result += "\x0e" #装備の数 #?353+ 13->14 (effect)
+	result += "\x0e" #装備の数 #353+ 13->14 (effect)
 	item_head = pc.item.get(pc.equip.head)
 	item_face = pc.item.get(pc.equip.face)
 	item_chestacce = pc.item.get(pc.equip.chestacce)
@@ -149,6 +149,7 @@ def make_09e9(pc):
 	item_left = pc.item.get(pc.equip.left)
 	item_shoes = pc.item.get(pc.equip.shoes)
 	item_socks = pc.item.get(pc.equip.socks)
+	item_effect = pc.item.get(pc.equip.effect)
 	#item_pet = pc.item.get(pc.equip.pet)
 	#左手モーション 片手
 	l_s_motion = pack_item_unsigned_byte_attr(
@@ -195,8 +196,8 @@ def make_09e9(pc):
 	result += pack_pict_id(item_socks, general.SOCKS_TYPE_LIST)
 	#ペット
 	result += pack_int(0)
-	#effect #?353+
-	result += pack_int(0)
+	#effect #353+
+	result += pack_pict_id(item_effect, general.EFFECT_TYPE_LIST)
 	#左手モーションタイプ size=3 (片手, 両手, 攻撃)
 	result += "\x03"+l_s_motion+l_d_motion+"\x00"
 	#右手モーションタイプ size=3 #chr_act_tbl.csvを参照する
