@@ -1888,6 +1888,74 @@ KUJI_MAP= (
 			(20050084, 1, "高性能使い捨てカメラ"),
 			(20050068, 1, "バット・イリュージョン"),
 		)),
+		("天正月の赤頭巾", (
+			(10136300, 1, "シモツキのフェイブルハート"),
+			(30003100, 1, "シモツキハウス"),
+			(10075288, 1, "シモツキの紹介状 "),
+			(20050483, 1, "ネコマタフェイブルハートＢＯＸ"),
+			(60145100, 1, "リラクネグリジェ（白）"),
+			(60145200, 1, "シモツキのブラウス（赤）"),
+			(50228900, 1, "シモツキのスカート（赤）"),
+			(31063100, 1, "リラクベッド（ピンク）"),
+			(50122400, 1, "リラクキャップ（白）"),
+			(50122500, 1, "シモツキのめがね"),
+			(50228700, 1, "リラクスリッパ（白）"),
+			(31103500, 1, "一軒家の柵"),
+			(10031327, 1, "ヘアカラー・ペールゴールド"),
+			(10070900, 10, "愛情たっぷりねこまんま"),
+			(20050057, 10, "にこにこピクニックランチ"),
+		)),
+		("ウィキッド・ナイトパレード", (
+			(10136500, 1, "デス・アルマ"),
+			(10136600, 1, "黒魔術の箒"),
+			(10075290, 1, "闇夜の紹介状 "),
+			(20050496, 1, "ネコマタウィッチハートＢＯＸ"),
+			(50095100, 1, "魔女のブローチ"),
+			(60145900, 1, "魔女のローブ（黒）"),
+			(60146000, 1, "闇夜のコート（黒）"),
+			(50229500, 1, "闇夜のショートパンツ（黒）"),
+			(50122800, 1, "魔女のフード（黒）"),
+			(50229600, 1, "魔女の靴（黒）"),
+			(60095600, 1, "金細工の大鋏"),
+			(31103600, 1, "黒魔術の花（黒）"),
+			(10031333, 1, "ヘアカラー・エメラルドグリーン"),
+			(10055300, 10, "流れ星キラキラ"),
+			(20050022, 10, "スポットライト"),
+		)),
+		("ECO×h.NAOTO", (
+			(10136400, 1, "ネコマタハート（フリル）"),
+			(10075289, 1, "h.NAOTOの紹介状"),
+			(60145500, 1, "h.NAOTO フレアーロングコート "),
+			(60145400, 1, "h.NAOTO コルセット付きドレス"),
+			(60145600, 1, "h.NAOTO コウモリ袖カーディガン"),
+			(60145700, 1, "h.NAOTO 巻き襟　燕尾ジャケット"),
+			(50229100, 1, "h.NAOTO バッスルパニエスカート"),
+			(50229200, 1, "h.NAOTO コウモリスカート"),
+			(31071200, 1, "Bloodゴシックキャンドル"),
+			(30010061, 1, "Bloodゴシックタイル"),
+			(60145800, 1, "h.NAOTO リボンタイ付きブラウス"),
+			(50011566, 1, "h.NAOTO レースアップタイツ"),
+			(50229300, 1, "h.NAOTO 2wayゴシックパンツ"),
+			(50229400, 1, "h.NAOTO レースシューズ"),
+			(50122700, 1, "h.NAOTO レースマスク"),
+		)),
+		("臘月の守り手", (
+			(10136700, 1, "ロウゲツのフェンサーハート"),
+			(10136800, 1, "カーズド・チェア"),
+			(10075291, 1, "ロウゲツの紹介状"),
+			(20050509, 1, "ネコマタバトラーハートＢＯＸ"),
+			(60146100, 1, "主のワンピース（白）"),
+			(60146200, 1, "ロウゲツの執事服（黒・上）"),
+			(50229700, 1, "ロウゲツの執事服（黒・下）"),
+			(60095700, 1, "ロウゲツのティーセット"),
+			(50081400, 1, "守護者の鞘（銀）"),
+			(50229800, 1, "ロウゲツの靴（黒）"),
+			(31167600, 1, "アンティークデスク（茶）"),
+			(50122900, 1, "ロウゲツの羽飾り（紺）"),
+			(10031368, 1, "ヘアカラー・アンティークパープル"),
+			(20050083, 1, "祝福のファンファーレ"),
+			#(20050074, 10, "伝説の召喚魔法カード（冬将軍）"),
+		)),
 	)),
 )
 
