@@ -52,6 +52,7 @@ left = 0
 shoes = 0
 socks = 0
 pet = 4
+effect = 0
 
 [equip_dem]
 head = 0
@@ -65,6 +66,7 @@ left = 0
 shoes = 0
 socks = 0
 pet = 0
+effect = 0
 
 [sort]
 item = 3,2,5,1,4
