@@ -1,7 +1,9 @@
 2012-12-27
 	update database to 354
-	packet fixes
+	353+ packet fixes
 	fix wrong password when delete character cause client frozen
+	support effect type equip
+	update item category script
 
 2012-12-21
 	update database to 353
